# snowdrop

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml
.github/workflows/: ci.yml
crates/index_client/: Cargo.toml
crates/index_client/src/: lib.rs
crates/snowdrop/: Cargo.toml
crates/snowdrop/src/: cli_struct.rs  config.rs  defaults.rs  main.rs  theme.rs
crates/snowdrop/src/commands/: auth.rs  install.rs  mod.rs  search.rs
crates/snowdrop/src/commands/install/: mod.rs  picker.rs
crates/snowdrop_asset_picker/: Cargo.toml
crates/snowdrop_asset_picker/src/: lib.rs
crates/snowdrop_config/: Cargo.toml
crates/snowdrop_config/src/: defaults.rs  lib.rs
crates/snowdrop_dirs/: Cargo.toml
crates/snowdrop_dirs/src/: lib.rs
crates/snowdrop_index_client/: Cargo.toml
crates/snowdrop_index_client/src/: error.rs  lib.rs  metadata.rs
crates/snowflake/: Cargo.toml
crates/snowflake/src/: cli_struct.rs  config.rs  defaults.rs  dirs.rs  main.rs
crates/snowflake/src/commands/: install.rs  mod.rs
crates/snowflake_index_client/: Cargo.toml
crates/snowflake_index_client/src/: lib.rs
crates/styled-env-logger/: Cargo.toml  README.md
crates/styled-env-logger/ci/: build.bash  test.bash
crates/styled-env-logger/examples/: log.rs  with_builder_1.rs  with_custom_env.rs  with_try_init.rs
crates/styled-env-logger/src/: lib.rs
src/: cli_struct.rs  config.rs  defaults.rs  dirs.rs  main.rs
src/commands/: install.rs
