[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
config = { version = "0.13.3", features = ["toml"] }
directories = "4.0.1"
index_client = { path = "../index_client" }
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
once_cell = "1.17.0"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
simple_logger = "4.0.0"
tokio = { version = "1.23.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
toml = "0.5.10"
