[package]
name = "snowflake_index_client"
description = "The Snowflake index client"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
miette = "5.5.0"
octocrab = "0.18.1"
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
