[package]
name = "styled_env_logger"
version = "0.1.0" # don't forget to update html_root_url
description = "An updated version of `pretty-env-logger`"
repository = "https://github.com/snowflakepm/snowflake"
authors = ["Sean McArthur <sean@seanmonstar>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
env_logger = "0.10"
log = "0.4"
